--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+{% include 'partials/_topbar.html' %}
+{% include 'partials/_navbar.html' %}
+
 {% block content %}
 {% endblock %}
 
