--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    register
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.email.label }}<br>
+        {{ form.email }}<br>
+        {{ form.username.label }}<br>
+        {{ form.username }}<br>
+        {{ form.first_name.label }}<br>
+        {{ form.first_name }}<br>
+        {{ form.last_name.label }}<br>
+        {{ form.last_name }}<br>
+        {{ form.password1.label }}<br>
+        {{ form.password1 }}<br>
+        {{ form.password2.label }}<br>
+        {{ form.password2 }}<br>
+        <button type="submit">Register</button><br>
+    </form>
 {% endblock %}
