--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -2,9 +2,9 @@
 <a href="{% url 'synchronizerabout' %}">synchronizer</a>
 <a href="{% url 'metronomeabout' %}">metronome</a>
 {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">logout</a>
+    <a href="{% url 'logoutuser' %}">logout</a>
 {% else %}
-<a href="{% url 'login' %}">login</a>
-<a href="{% url 'register' %}">register</a>
+    <a href="{% url 'login' %}">login</a>
+    <a href="{% url 'register' %}">register</a>
 {% endif %}
 <br>
