--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -2,10 +2,16 @@
     <a href="{% url 'synchronizerabout' %}">about</a>
     <a href="{% url 'synchronizerhowto' %}">howto</a>
     <a href="{% url 'synchronize' %}">synchronize</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'projects' %}">my projects</a>
+    {% endif %}
 {% elif 'metronome' in request.path %}
     <a href="{% url 'metronomeabout' %}">about</a>
     <a href="{% url 'metronomehowto' %}">howto</a>
     <a href="{% url 'generate' %}">generate</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'metronomes' %}">my metronomes</a>
+    {% endif %}
 {% elif 'accounts' in request.path %}
 {% else %}
     <a href="{% url 'about' %}">about</a>
