--- a/templates/metronome/generate.html
+++ b/templates/metronome/generate.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    generate
+    <form method="POST">
+        {{ creation_form.frequency.label }}<br>
+        {{ creation_form.frequency }}<br>
+        {{ creation_form.duration.label }}<br>
+        {{ creation_form.duration }}<br>
+        {{ creation_form.bpm.label }}<br>
+        {{ creation_form.bpm }}<br>
+        {{ creation_form.tick.label }}<br>
+        {{ creation_form.tick }}<br>
+        <button type="submit">Generate</button><br>
+    </form>
 {% endblock %}
