--- a/templates/metronome/metronomes.html
+++ b/templates/metronome/metronomes.html
@@ -9,14 +9,23 @@
             <th>BPM</th>
             <th>Tick</th>
             <th>Frequency</th>
+            <th>Delete</th>
         </tr>
         {% for metronome in metronomes %}
             <tr>
                 <td>{{ metronome.title }}</td>
-                <td>{{ metronome.duration }}</td>
+                <td>{{ metronome.duration }}s</td>
                 <td>{{ metronome.bpm }}</td>
                 <td>{{ metronome.tick }}</td>
-                <td>{{ metronome.frequency }}</td>
+                <td>{{ metronome.frequency }}Hz</td>
+                <td>
+                    <form method="POST">
+                        {% csrf_token %}
+                        <button name="delete_id" type="submit" value="{{ metronome.id }}">
+                            ✗
+                        </button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </table>
