--- a/templates/synchronizer/projects.html
+++ b/templates/synchronizer/projects.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    projects
+    <form method="POST">
+        {% csrf_token %}
+        {{ creation_form.title.label }}<br>
+        {{ creation_form.title }}<br>
+        {{ creation_form.description.label }}<br>
+        {{ creation_form.description }}<br>
+        {{ errors }}
+        <button type="submit" name="creation_submit">Create</button>
+    </form>
+
 {% endblock %}
