synchronizer projects displayed

--- a/templates/synchronizer/projects.html
+++ b/templates/synchronizer/projects.html
@@ -11,4 +11,27 @@
         <button type="submit" name="creation_submit">Create</button>
     </form>
 
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Instruments</th>
+            <th>Edited</th>
+            <th>Created</th>
+        </tr>
+        {% for project in projects %}
+            <tr>
+                <td><a href="{% url 'project' project.id %}">{{ project.title }}</a></td>
+                <td>{{ project.description }}</td>
+                <td>
+                    {% for recording in project.recordings.all %}
+                        {{ recording.instrument }}
+                    {% endfor %}
+                </td>
+                <td>{{ project.creation_date }}</td>
+                <td>{{ project.edition_date }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+
 {% endblock %}
