--- a/templates/synchronizer/projects.html
+++ b/templates/synchronizer/projects.html
@@ -18,6 +18,7 @@
             <th>Instruments</th>
             <th>Edited</th>
             <th>Created</th>
+            <th>Delete</th>
         </tr>
         {% for project in projects %}
             <tr>
@@ -30,6 +31,20 @@
                 </td>
                 <td>{{ project.creation_date }}</td>
                 <td>{{ project.edition_date }}</td>
+                <td>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {% if project.id is delete_id %}
+                            <button name="confirm_id" type="submit" value="{{ project.id }}">
+                                ✗
+                            </button>
+                        {% else %}
+                            <button name="delete_id" type="submit" value="{{ project.id }}">
+                                ✗
+                            </button>
+                        {% endif %}
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </table>
