--- a/templates/synchronizer/projects.html
+++ b/templates/synchronizer/projects.html
@@ -13,7 +13,7 @@
         </tr>
         {% for project in projects %}
             <tr>
-                <td><a href="{% url 'project' project.id %}">{{ project.title }}</a></td>
+                <td><a href="{% url 'project' project.title %}">{{ project.title }}</a></td>
                 <td>{{ project.description }}</td>
                 <td>
                     {% for recording in project.recordings.all %}
