project url via slug, synchronizer models update

--- a/templates/synchronizer/create_project.html
+++ b/templates/synchronizer/create_project.html
@@ -5,6 +5,8 @@
         {% csrf_token %}
         {{ creation_form.title.label }}<br>
         {{ creation_form.title }}<br>
+        {{ creation_form.bpm.label }}<br>
+        {{ creation_form.bpm }}<br>
         {{ creation_form.description.label }}<br>
         {{ creation_form.description }}<br>
         {{ errors }}
