--- a/templates/synchronizer/project.html
+++ b/templates/synchronizer/project.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <br>
     {{ project.title }}<br>
     {{ project.description }}<br>
     {{ project.bpm }}<br>
     <br>
-
+    <a href="{% url 'add_recording' project.slug %}">Add recording</a>
+    <br><br>
     <table>
         <tr>
             <th>Instrument</th>
@@ -22,19 +24,4 @@
             </tr>
         {% endfor %}
     </table>
-    <br>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.file.label }}<br>
-        {{ form.file }}<br>
-        {{ form.instrument.label }}<br>
-        {{ form.instrument }}<br>
-        {{ form.identifier.label }}<br>
-        {{ form.identifier }}<br>
-        {{ form.pitch.label }}<br>
-        {{ form.pitch }}<br>
-        {{ form.author.label }}<br>
-        {{ form.author }}<br>
-        <button type="submit">Add</button>
-    </form>
 {% endblock %}
