--- a/templates/synchronizer/project.html
+++ b/templates/synchronizer/project.html
@@ -19,9 +19,9 @@
         {% for recording in project.recordings.all %}
             <tr>
                 <td>
-                    <a href="{% url 'edit_recording' project.slug recording.slug %}">
+{#                    <a href="{% url 'edit_recording' project.slug recording.slug %}">#}
                         {{ recording.instrument }}
-                    </a>
+{#                    </a>#}
                 </td>
                 <td>{{ recording.identifier }}</td>
                 <td>{{ recording.pitch }}</td>
