synchronizer cut recording form and validation

--- a/templates/synchronizer/cut_recording.html
+++ b/templates/synchronizer/cut_recording.html
@@ -4,7 +4,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        <input name="cut_index" type="range" min="1" max="100" value="50" class="slider"><br>
+        {{ form.cut_index }}<br>
         <button type="submit">Cut</button>
     </form>
     <br>
