synchronizer recordings synchronized on adding

--- a/templates/synchronizer/add_recording.html
+++ b/templates/synchronizer/add_recording.html
@@ -9,6 +9,7 @@
     <a href="{% url 'project' project.slug %}">Back</a>
     <br>
     <br>
+    {{ errors }}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.file.label }}<br>
