--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,13 +1,25 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
     {{ error }}
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.username.label }}<br>
-        {{ form.username }}<br>
-        {{ form.password.label }}<br>
-        {{ form.password }}<br>
-        <button type="submit">Login</button><br>
+    <form method="POST" class="row">
+        <div class="col s1"></div>
+        <div class="col s6">
+            {% csrf_token %}
+            <div class="input-field col s12">
+                {% render_field form.username autocomplete="off" %}
+                <label for="id_username">Username</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.password %}
+                <label for="id_password">Password</label>
+            </div>
+            <div class="input-field col s12">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Login
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
     </form>
 {% endblock %}
