--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,21 +1,41 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
     {{ error }}
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.email.label }}<br>
-        {{ form.email }}<br>
-        {{ form.username.label }}<br>
-        {{ form.username }}<br>
-        {{ form.first_name.label }}<br>
-        {{ form.first_name }}<br>
-        {{ form.last_name.label }}<br>
-        {{ form.last_name }}<br>
-        {{ form.password1.label }}<br>
-        {{ form.password1 }}<br>
-        {{ form.password2.label }}<br>
-        {{ form.password2 }}<br>
-        <button type="submit">Register</button><br>
+    <form method="POST" class="row">
+        <div class="col s1"></div>
+        <div class="col s6">
+            {% csrf_token %}
+            <div class="input-field col s12">
+                {% render_field form.email autocomplete="off" %}
+                <label for="id_email">Email</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.username autocomplete="off" %}
+                <label for="id_username">Username</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.first_name autocomplete="off" %}
+                <label for="id_first_name">First Name</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.last_name autocomplete="off" %}
+                <label for="id_last_name">Last Name</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.password1 %}
+                <label for="id_password1">Password</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.password2 %}
+                <label for="id_password2">Password confirmation</label>
+            </div>
+            <div class="input-field col s12">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Register
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
     </form>
 {% endblock %}
