--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!--Compiled and minifed jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="icon" href="" type="image/x-icon" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
+    <!--Roboto-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.css' %}"  media="screen,projection"/>
+    <!--Import style.css-->
+    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"  media="screen,projection"/>
+
 </head>
 <body>
 
 {% include 'partials/_topbar.html' %}
-{% include 'partials/_navbar.html' %}
 
-{% block content %}
-{% endblock %}
+<div class="row">
+    <div class="row col s8 offset-s2">
+        <div class="col s2">
+            {% if 'accounts' not in request.path %}
+                {% include 'partials/_navbar.html' %}
+            {% endif %}
+        </div>
+        <div class="col s10">
+            <div class="row">
+                <div class="col s11 offset-s1 content-block">
+                    <div class="bordered-content-block">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="{% static 'js/materialize.js' %}"></script>
+<script>
+$(document).ready(function() {
+    $('select').formSelect();
+});
+</script>
 </body>
 </html>
