--- a/templates/metronome/generate.html
+++ b/templates/metronome/generate.html
@@ -2,39 +2,145 @@
 
 {% load static %}
 
+{% load widget_tweaks %}
+
 {% block content %}
     {{ errors }}
     <form method="POST">
-        {% csrf_token %}
-        {{ creation_form.frequency.label }}<br>
-        {{ creation_form.frequency }}<br>
-        {{ creation_form.duration.label }}<br>
-        {{ creation_form.duration }}<br>
-        {{ creation_form.bpm.label }}<br>
-        {{ creation_form.bpm }}<br>
-        {{ creation_form.stereo.label }}<br>
-        {{ creation_form.stereo }}<br>
-        {{ creation_form.tick.label }}<br>
-        {{ creation_form.tick }}<br>
-        <button type="submit" name="creation_submit">Generate</button><br>
-    </form>
-    <br>
-    <br>
-    {% if save_form %}
-        Name this metronome to save it for another time!
-        <form method="POST">
+        <div class="col s5">
+            <div class="input-field col s12 no-margin-bottom">
+                <h5>Generate metronome</h5>
+            </div>
             {% csrf_token %}
-            {{ save_form.as_p }}<br>
-            <button type="submit" name="save_submit" value="{{ metronome }}">Save</button><br>
-        </form>
-    {% endif %}
+            <div class="input-field col s12">
+                {% render_field creation_form.frequency %}
+                <label for="id_frequency">Frequency</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field creation_form.duration %}
+                <label for="id_duration">Duration</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field creation_form.bpm %}
+                <label for="id_bpm">BPM</label>
+            </div>
+            <div class="input-field col s12">
+                <label class="padding-left-3px">
+                    {% render_field creation_form.stereo type="checkbox" %}
+                    <span>Stereo</span>
+                </label>
+            </div>
+            <div class="input-field col s12 no-padding">
+                {% for tick in creation_form.tick %}
+                    <div class="input-field col s12 no-padding">
+                        <label>
+                            {{ tick.tag }}
+                            <span>{{ tick.choice_label }}</span>
+                        </label>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="input-field col s12">
+                <button class="btn waves-effect waves-light margin-top-1rem" type="submit" name="creation_submit">Generate
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
+    </form>
+    <div class="col s5 offset-s2">
     {% if generated_metronome_url %}
+        <div class="input-field col s12">
+            <h5>Download metronome</h5>
+        </div>
+        <div class="input-field col s12 row no-margin">
+            <div class="input-field col s2 no-padding no-margin-bottom">
+                <a href="#" id="play">
+                    <button class="btn waves-effect waves-light" type="button">
+                        <i class="material-icons" id="playIcon">play_arrow</i>
+                    </button>
+                </a>
+            </div>
+            <div class="input-field col s10 no-padding no-margin-bottom margin-top-7px">
+                <input type="range" id="audioRange" min="0" max="{{ audio.max_value }}" value="0" class="margin-top-2px">
+                <audio id="id_audio">
+                    <source src="{% static generated_metronome_url %}" type="audio/wav">
+                </audio>
+            </div>
+            <div class="input-field col s2 no-padding">
+                <i class="material-icons left no-margin">volume_up</i>
+            </div>
+            <div class="input-field col s10 margin-top-2px no-padding no-margin-bottom">
+                <label for="audioVolume"></label><input type="range" id="audioVolume" value="100">
+            </div>
+        </div>
         <form method="POST" action="{% url 'download_metronome' generated_metronome_name %}">
             {% csrf_token %}
-            <button type="submit">Download</button>
+            <div class="input-field col s12 no-margin">
+                <button class="btn waves-effect waves-light" type="submit">Download
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
         </form>
-         <audio controls>
-             <source src="{% static generated_metronome_url %}" type="audio/wav">
-         </audio>
     {% endif %}
+    {% if save_form %}
+        <form method="POST" class="top100px">
+            <div class="input-field col s12 no-margin-bottom">
+                <h5>Save metronome</h5>
+            </div>
+            {% csrf_token %}
+            <div class="input-field col s12 no-margin-top">
+                {% render_field save_form.title %}
+                <label for="id_title">Title</label>
+            </div>
+            <div class="input-field col s12 top-minus3px">
+                <button class="btn waves-effect waves-light" type="submit" name="save_submit" value="{{ metronome }}">Save
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </form>
+    {% endif %}
+    </div>
+
+    <script>
+    let audio = document.getElementById('id_audio');
+    let audioRange = document.getElementById('audioRange')
+    let audioVolume = document.getElementById('audioVolume')
+    let play = document.getElementById('play');
+    let playIcon = document.getElementById('playIcon');
+
+    audio.onpause = function () {
+        playIcon.innerText = "play_arrow";
+    }
+
+    audio.onplay = function () {
+        playIcon.innerText = "pause";
+    }
+
+    play.onclick = function () {
+        if (playIcon.innerText === "pause") {
+            audio["pause"]();
+        }
+        else {
+            audio["play"]();
+        }
+    }
+
+    audioRange.onchange = function () {
+        audio["play"]();
+    }
+
+    audioRange.oninput = function () {
+        audio["pause"]();
+        audio.currentTime= audioRange.value / {{ audio.frequency }};
+    }
+
+    audio.ontimeupdate = function () {
+        audioRange.value = audio.currentTime * {{ audio.frequency }};
+    }
+
+    audioVolume.onclick = function () {
+        audio.volume = audioVolume.value / 100;
+    }
+
+    </script>
 {% endblock %}
