--- a/templates/synchronizer/add_recording.html
+++ b/templates/synchronizer/add_recording.html
@@ -1,27 +1,45 @@
 {% extends 'base.html' %}
 
+{% load widget_tweaks %}
+
 {% block content %}
-    <br>
-    {{ project.title }}<br>
-    {{ project.description }}<br>
-    {{ project.bpm }}<br>
-    <br>
-    <a href="{% url 'project' project.slug %}">Back</a>
-    <br>
-    <br>
-    {{ errors }}
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.file.label }}<br>
-        {{ form.file }}<br>
-        {{ form.instrument.label }}<br>
-        {{ form.instrument }}<br>
-        {{ form.identifier.label }}<br>
-        {{ form.identifier }}<br>
-        {{ form.pitch.label }}<br>
-        {{ form.pitch }}<br>
-        {{ form.author.label }}<br>
-        {{ form.author }}<br>
-        <button type="submit">Add</button>
+    <form method="POST" enctype="multipart/form-data" class="row">
+        <div class="col s1"></div>
+        <div class="col s6">
+            <div class="input-field col s12 no-margin-bottom">
+                <h5>Create project</h5>
+            </div>
+            {% csrf_token %}
+            <div class="file-field input-field col s12">
+              <div class="btn">
+                <span><i class="material-icons">attach_file</i></span>
+                {% render_field form.file %}
+              </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text" placeholder="Recording file">
+              </div>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.instrument %}
+                <label for="id_instrument">Instrument</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.identifier autocomplete="off" %}
+                <label for="id_identifier">Identifier</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.pitch autocomplete="off" %}
+                <label for="id_pitch">Pitch</label>
+            </div>
+            <div class="input-field col s12">
+                {% render_field form.author %}
+                <label for="id_author">Author</label>
+            </div>
+            <div class="input-field col s12">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Add
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
     </form>
 {% endblock %}
